fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/IDN_Contract__c.object-meta.xml
<CustomObject>
    <label>IDN Contract</label>
    <nameField>
        <label>IDN Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IDN Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>