fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/Admin_Fee_Details__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Details__c</fullName>
    <label>Admin Fee Details</label>
    <type>TextArea</type>
</CustomField>