fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/Extended_Date__c.field-meta.xml
<CustomField>
    <fullName>Extended_Date__c</fullName>
    <label>Extended Date</label>
    <type>Date</type>
</CustomField>