fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/Growth_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Growth_Incentive__c</fullName>
    <label>Growth Incentive</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>