fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/IDN_Account__c.field-meta.xml
<CustomField>
    <fullName>IDN_Account__c</fullName>
    <label>IDN Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IDN Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IDN Contracts</relationshipLabel>
    <relationshipName>IDN_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>