fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/IDN_Region__c.field-meta.xml
<CustomField>
    <fullName>IDN_Region__c</fullName>
    <formula>text(IDN_Account__r.IDN_Region__c)</formula>
    <label>IDN Region</label>
    <type>Text</type>
</CustomField>