fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/Incentive_Breakout_by_Facility__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Breakout_by_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive Breakout by Facility</label>
    <type>Checkbox</type>
</CustomField>