fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/Pricing_Description__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Description__c</fullName>
    <label>Pricing Description</label>
    <type>TextArea</type>
</CustomField>