fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/SAP_Fees__c.field-meta.xml
<CustomField>
    <fullName>SAP_Fees__c</fullName>
    <label>SAP Fees</label>
    <type>TextArea</type>
</CustomField>