fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/Total_Admin_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Admin_Payments__c</fullName>
    <label>Total Admin Payments</label>
    <summarizedField>IDN_Payment__c.Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>IDN_Payment__c.Payment_Type__c</field>
        <operation>equals</operation>
        <value>Admin</value>
    </summaryFilterItems>
    <summaryForeignKey>IDN_Payment__c.IDN_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>