fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/Volume_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Volume_Frequency__c</fullName>
    <label>Volume Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>