fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/fields/Volume_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Volume_Incentive__c</fullName>
    <label>Volume Incentive</label>
    <type>TextArea</type>
</CustomField>