fullSandbox11072023/force-app/main/default/objects/IDN_Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IDN_Account__c</columns>
    <columns>IDN_Region__c</columns>
    <columns>Term_Start__c</columns>
    <columns>Term_End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>